[gd_scene load_steps=5 format=3 uid="uid://cppoi0867qwub"]

[ext_resource type="Script" uid="uid://buqpdtq2nnlcb" path="res://scripts/IconSpinner.gd" id="1_1cs1c"]
[ext_resource type="Script" uid="uid://dgilkci7w60j" path="res://scripts/PerkMachine.gd" id="1_gpvhc"]
[ext_resource type="Texture2D" uid="uid://c7ive2fj6w8d7" path="res://icon.svg" id="1_ji6xi"]
[ext_resource type="Script" uid="uid://dq026oovgyr6t" path="res://scripts/Icon.gd" id="4_cgmax"]

[node name="PerkMachine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpvhc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 300
theme_override_constants/margin_bottom = 300

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="IconSpinner" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("1_1cs1c")

[node name="Icon1" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/IconSpinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -158.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
expand_mode = 1
script = ExtResource("4_cgmax")

[node name="Icon2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/IconSpinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
expand_mode = 1
script = ExtResource("4_cgmax")

[node name="Icon3" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/IconSpinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
expand_mode = 1
script = ExtResource("4_cgmax")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Perk: +1000 social credit"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="IconSpinner2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("1_1cs1c")

[node name="Icon1" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/IconSpinner2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -158.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="Icon2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/IconSpinner2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="Icon3" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/IconSpinner2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Perk: +1000 social credit"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="IconSpinner3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("1_1cs1c")

[node name="Icon1" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3/IconSpinner3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -158.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="Icon2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3/IconSpinner3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="Icon3" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3/IconSpinner3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ji6xi")
script = ExtResource("4_cgmax")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Perk: +1000 social credit"
fit_content = true
horizontal_alignment = 1
